--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "axios": "^0.27.2",
+    "@walletconnect/web3-provider": "^1.7.8",
     "framer-motion": "^6.3.2",
+    "moralis": "^1.5.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-moralis": "^1.3.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
