--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
       "/node_modules/(?![@autofiy/autofiyable|@autofiy/property]).+\\.tsx$"
   ]
    
+  },
+  "resolutions": {
+    "csstype": "3.0.10"
   }
  
 }
